test_programs/compile_failure/noirc_frontend_tests_cannot_assign_unconstrained_and_regular_fn_to_variable/src/main.nr

    fn main() {
        let _func = if true { foo } else { bar };
    }

    fn foo() {}
    unconstrained fn bar() {}
    